--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,3 +15,5 @@ dependencies:
   #   # All dependencies of `main` are public by default.
   #   public: true
   lvgl/lvgl: ^9.*
+  espressif/esp_lcd_st7796: '*'
+  espressif/esp_lvgl_port: '*'
