--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.c"
+idf_component_register(SRCS "main.c" "lvgl_lottie.c"
+"lv_example_lottie_approve.c"
                     INCLUDE_DIRS ".")
